k8s/base/04-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: spendwise-test-lab
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 5001
      targetPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: spendwise-test-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: ghcr.io/hashimzaffar/spendwise-auth-service:6d5987e8207a48fa22649c34d27c64991c377f21
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5001
          readinessProbe:
            httpGet:
              path: /ready
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 30
            periodSeconds: 20
