k8s/base/05-transaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: spendwise
spec:
  type: ClusterIP
  selector:
    app: transaction-service
  ports:
    - name: http
      port: 5002
      targetPort: 5002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: spendwise
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: ghcr.io/hashimzaffar/spendwise-transaction-service:6d5987e8207a48fa22649c34d27c64991c377f21
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5002

          readinessProbe:
            httpGet:
              path: /ready
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
